# vnpy_hts

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  meson.build  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
script/: run.py
vnpy_hts/: __init__.py
vnpy_hts/api/: __init__.py  hts_constant.py  vnhtsmd.pyd  vnhtstd.pyd
vnpy_hts/api/generator/: HTS_constant.py  HTS_md_source_function.cpp  HTS_struct.py  HTS_td_header_define.h  HTS_td_header_function.h  HTS_td_header_on.h  HTS_td_header_process.h  HTS_td_source_function.cpp  HTS_td_source_module.cpp  HTS_td_source_on.cpp  HTS_td_source_process.cpp  HTS_td_source_switch.cpp  HTS_td_source_task.cpp  HTS_typedef.py  generate_api_functions.py  generate_data_type.py  generate_struct.py
vnpy_hts/api/include/hts/: DFITCSECApiDataType.h  DFITCSECApiStruct.h  DFITCSECMdApi.h  DFITCSECTraderApi.h
vnpy_hts/api/libs/: DFITCSECMdApi.lib  DFITCSECTraderApi.lib  InformationCollect.lib
vnpy_hts/api/vnhts/: vnhts.h  vnhts.sln
vnpy_hts/api/vnhts/vnhtsmd/: vnhtsmd.cpp  vnhtsmd.h  vnhtsmd.vcxproj  vnhtsmd.vcxproj.filters
vnpy_hts/api/vnhts/vnhtstd/: vnhtstd.cpp  vnhtstd.h  vnhtstd.vcxproj  vnhtstd.vcxproj.filters
vnpy_hts/gateway/: __init__.py  hts_gateway.py
